# CopycatBot

./: .gitignore  README.md  config.json.example  main.py  pyproject.toml  requirements.txt
app/: bot.py  config.py  database.py  file_handler.py  media_processor.py  sync_manager.py
