[project]
name = "copycatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Herman Guilliman",email = "hermanguilliman@proton.me"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "telethon (>=1.40.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
